# SoundProcessing

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CMUtils.cmake
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/sp/: soundProcessor.hpp
lib/include/sp/api/: soundData.hpp  soundProcessorApi.h  soundProcessorApi.hpp
lib/include/sp/config/: configuration.hpp
lib/include/sp/entity/: soundFileData.hpp  soundFileType.hpp
lib/include/sp/filter/: pipeline.hpp  pipelineElement.hpp  sink.hpp  soundPipeline.hpp  source.hpp
lib/include/sp/import/: oggImporter.hpp  soundFileImporter.hpp  soundFileImporterAccess.h  waveImporter.hpp
lib/include/sp/player/: player.hpp
lib/include/sp/ui/: imgui.hpp
lib/include/sp/util/: fileUtils.hpp  pathUtils.hpp  progress.hpp  randomUtils.hpp  rawData.hpp  stringUtils.hpp
lib/src/: soundProcessor.cpp
lib/src/api/: soundProcessorApi.cpp
lib/src/filter/: pipeline.cpp
lib/src/import/: soundFileImporter.cpp
test/: CMakeLists.txt
test/entity/: soundFileTypeTest.cpp
test/pipeline/: pipelineTest.cpp
test/util/: pathUtilsTest.cpp
